refactor: implement generate sbom with osi component